<resources>
    <string name="app_name">MyGymRoutine</string>
    <string name="createAccountText"><u>¿No tienes cuenta? Create una</u></string>

    <!--  Bottom navigation items  -->
    <string name="bottom_navigation_item_home">Inicio</string>
    <string name="bottom_navigation_item_routines">Rutinas</string>
    <string name="bottom_navigation_item_exercise">Ejercicios</string>
    <string name="bottom_navigation_item_profile">Perfil</string>

    <string name="register_title_create_account">Crear cuenta</string>
    <string name="home_welcome_user">¡Hola Andrés!</string>

    <string-array name="frecuenciasDeportes">
        <item>1 día a la semana</item>
        <item>3 dias a la semana</item>
        <item>5 dias a la semana</item>
        <item>Solo el fín de semana</item>
        <item>Nunca</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_password">Modificar contraseña</string>
    <string name="profile_my_profile">Mi perfil</string>
    <string name="profile_logout">Cerrar sesión</string>
    <string name="profile_about">Acerca de</string>
    <string name="profile_data">Mi perfil</string>
    <string name="profile_save_myProfile">Guardar</string>
    <string name="profile_modify_password">Modificar contraseña</string>
    <string name="preferences_client">client_saved</string>

</resources>