<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/bottom_navigation_item_home"
        android:icon="@drawable/round_home_24"/>
    <item
        android:id="@+id/routinesFragment"
        android:title="@string/bottom_navigation_item_routines"
        android:icon="@drawable/round_description_24"/>
    <item
        android:id="@+id/exerciseFragment"
        android:title="@string/bottom_navigation_item_exercise"
        android:icon="@drawable/round_format_list_bulleted_24"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/bottom_navigation_item_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"/>
</menu>