<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.activity.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl1"
        android:layout_width="match_parent"
        android:layout_height="300dp">

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/logout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/personal_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true">

                <ImageView
                    android:id="@+id/personal_image"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="18dp"
                    android:background="@color/light_blue"
                    android:scaleType="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_id_card" />

                <TextView
                    android:id="@+id/personal_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/profile_my_profile"
                    android:textColor="#525252"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/personal_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/personal_image"
                    app:layout_constraintTop_toTopOf="@id/personal_image" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="14dp"
                    android:background="#818181"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/personal_text"
                    app:layout_constraintTop_toBottomOf="@id/personal_image" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/password_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true">


                <ImageView
                    android:id="@+id/password_image"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="18dp"
                    android:background="@color/light_blue"
                    android:scaleType="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_key" />

                <TextView
                    android:id="@+id/password_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/profile_password"
                    android:textColor="#525252"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/password_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/password_image"
                    app:layout_constraintTop_toTopOf="@id/password_image"
                    app:layout_constraintVertical_bias="0.428" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="14dp"
                    android:background="#818181"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/password_text"
                    app:layout_constraintTop_toBottomOf="@id/password_image" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logout_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/logout_image"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="18dp"
            android:background="@color/light_blue"
            android:scaleType="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/round_logout_24" />

        <TextView
            android:id="@+id/logout_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/profile_logout"
            android:textColor="#525252"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/logout_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/logout_image"
            app:layout_constraintTop_toTopOf="@id/logout_image" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="14dp"
            android:background="#818181"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/logout_text"
            app:layout_constraintTop_toBottomOf="@id/logout_image" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>